Add controls to OpenLayers map

--- a/js/src/geo/index.html
+++ b/js/src/geo/index.html
@@ -52,6 +52,20 @@
 			content: "✖";
 		}
 
+		.map .ol-scale-line {
+			bottom: 0px;
+			left: 50%;
+			margin-right: -50%;
+			transform: translate(-50%, -50%);
+		}
+
+		.map .ol-scale-bar {
+			bottom: 0px;
+			left: 50%;
+			margin-right: -50%;
+			transform: translate(-50%, -50%);
+		}
+
 		#popup-content {
 			font: 16px sans-serif;
 		}
